The backend side started to take shape, we created the required services and injected them in the program class, also did some get methods

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source= jobApplicationSystem.db"
+    "DefaultConnection": "Data Source=jobApplicationSystem.db"
   }
 }
